--- a/style.css
+++ b/style.css
@@ -1,18 +1,15 @@
-body, html{
-    /* background-color: rgb(221, 221, 27); */
-    background-image: url(./images/yoga.png);
+.text{
+    font-family: Arial;
+    font-size: medium;
+    width: 480px;
+    margin: 4px;
+    padding: 15px;
+    border-right: 2px;
 }
 *{
     box-sizing: border-box;
 }
-/* .bg-img{
-    background-image: url(./images/yoga.png);
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-} */
+
 input[type="text"] {
  width: 100%;
  padding: 15px;
@@ -31,12 +28,25 @@ input[type="password"] {
 }
 .btn{
     width: 100%;
-    margin: 8px, 0px;
-    padding: 14px, 20px;
-    border: none;
+    margin: 5px, 0px, 22px, 0px;
+    padding: 15px;
+    border: 2px solid rgb(167, 162, 162);
     cursor: pointer;
     border-radius: 4px;
+    margin-top: 20px;
     opacity: 0.9;
+    background-color: #58df58;
+}
+.head{
+    width: 150%;
+    margin: 5px, 0px, 22px, 0px;
+    padding: 15px;
+    border: 2px solid rgb(167, 162, 162);
+    cursor: pointer;
+    border-radius: 10px;
+    margin-top: 20px;
+    opacity: 0.9;
+    background-color: #3b3bad;
 }
 .container{
 position: absolute;
@@ -47,4 +57,11 @@ padding: 16px;
 }
 .btn:hover{
     opacity: 1;
+}
+body{
+    background-repeat: no-repeat;
+    background-position: 100%;
+    background-size: cover;
+    height: 100%;
+    background-color: pink;
 }
