--- a/style.css
+++ b/style.css
@@ -2,9 +2,11 @@
     font-family: Arial;
     font-size: medium;
     width: 480px;
+    margin-left: auto;
+    margin-right: auto;
     margin: 4px;
     padding: 15px;
-    border-right: 2px;
+    border-right: 2px
 }
 *{
     box-sizing: border-box;
@@ -38,30 +40,33 @@ input[type="password"] {
     background-color: #58df58;
 }
 .head{
-    width: 150%;
+    width: 100%;
+    right: 0;
     margin: 5px, 0px, 22px, 0px;
     padding: 15px;
     border: 2px solid rgb(167, 162, 162);
     cursor: pointer;
-    border-radius: 10px;
+    border-radius: 4px;
     margin-top: 20px;
     opacity: 0.9;
-    background-color: #3b3bad;
+    background-color: #5050a7
 }
 .container{
 position: absolute;
-margin-left: auto;
-margin-right: auto;
-max-width: 300px;
+margin: 20px;
+max-width: 500px;
 padding: 16px;
+border: 10px;
+right: 0;
+background-color: white;
 }
 .btn:hover{
     opacity: 1;
 }
 body{
-    background-repeat: no-repeat;
     background-position: 100%;
     background-size: cover;
     height: 100%;
-    background-color: pink;
+    background-color: peachpuff;
 }
+
