--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 .text{
     font-family: Arial;
     font-size: medium;
-    width: 480px;
-    margin-left: auto;
-    margin-right: auto;
+    font-weight: bold;
+    width: 500px;
     margin: 4px;
     padding: 15px;
-    border-right: 2px
+    border-right: 2px   
 }
 *{
     box-sizing: border-box;
@@ -37,7 +36,7 @@ input[type="password"] {
     border-radius: 4px;
     margin-top: 20px;
     opacity: 0.9;
-    background-color: #58df58;
+    background-color: hsl(154, 59%, 51%)
 }
 .head{
     width: 100%;
@@ -49,13 +48,13 @@ input[type="password"] {
     border-radius: 4px;
     margin-top: 20px;
     opacity: 0.9;
-    background-color: #5050a7
+    background-color: hsl(228, 45%, 44%);
 }
 .container{
 position: absolute;
-margin: 20px;
-max-width: 500px;
-padding: 16px;
+margin: 15px;
+max-width: 400px;
+padding: 36px;
 border: 10px;
 right: 0;
 background-color: white;
@@ -64,9 +63,26 @@ background-color: white;
     opacity: 1;
 }
 body{
-    background-position: 100%;
-    background-size: cover;
-    height: 100%;
-    background-color: peachpuff;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-family: sans-serif;
+    height: 100vh;
+    padding: 20px;
+    background-color: hsl(0, 100%, 74%);
+}
+main{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100vh;
+    min-width: 100vw;
+    padding: 20px;
+    margin-top: 80px;
+
+}
+img{
+    max-width: 100vw;
 }
 
