--- a/style.css
+++ b/style.css
@@ -2,10 +2,11 @@
     font-family: Arial;
     font-size: medium;
     font-weight: bold;
-    width: 500px;
-    margin: 4px;
-    padding: 15px;
-    border-right: 2px   
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px;
+    border-right: 2px 
 }
 *{
     box-sizing: border-box;
@@ -52,9 +53,10 @@ input[type="password"] {
 }
 .container{
 position: absolute;
-margin: 15px;
+margin: 8px;
 max-width: 400px;
-padding: 36px;
+height: 600px;
+padding: 24px;
 border: 10px;
 right: 0;
 background-color: white;
@@ -76,11 +78,11 @@ main{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    font-weight: bolder;
     height: 100vh;
     min-width: 100vw;
     padding: 20px;
     margin-top: 80px;
-
 }
 img{
     max-width: 100vw;
