--- a/style.css
+++ b/style.css
@@ -1,90 +1,29 @@
-.text{
-    font-family: Arial;
-    font-size: medium;
-    font-weight: bold;
-    width: 300px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 20px;
-    border-right: 2px 
-}
-*{
-    box-sizing: border-box;
-}
-
-input[type="text"] {
- width: 100%;
- padding: 15px;
- margin: 5px 0px, 22px, 0px;
- display: inline-block;
- border: 2px solid rgb(167, 162, 162) ;
- border-radius: 8px;
-}
-input[type="password"] {
-    width: 100%;
-    padding: 15px;
-    margin: 5px 0px, 22px, 0px;
-    display: inline-block;
-    border: 2px solid rgb(167, 162, 162) ;
-    border-radius: 8px;
-}
-.btn{
-    width: 100%;
-    margin: 5px, 0px, 22px, 0px;
-    padding: 15px;
-    border: 2px solid rgb(167, 162, 162);
-    cursor: pointer;
-    border-radius: 4px;
-    margin-top: 20px;
-    opacity: 0.9;
-    background-color: hsl(154, 59%, 51%)
-}
-.head{
-    width: 100%;
-    right: 0;
-    margin: 5px, 0px, 22px, 0px;
-    padding: 15px;
-    border: 2px solid rgb(167, 162, 162);
-    cursor: pointer;
-    border-radius: 4px;
-    margin-top: 20px;
-    opacity: 0.9;
-    background-color: hsl(228, 45%, 44%);
-}
-.container{
-position: absolute;
-margin: 8px;
-max-width: 400px;
-height: 600px;
-padding: 24px;
-border: 10px;
-right: 0;
-background-color: white;
-}
-.btn:hover{
-    opacity: 1;
-}
 body{
-    font-size: 16px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    font-family: sans-serif;
-    height: 100vh;
-    padding: 20px;
-    background-color: hsl(0, 100%, 74%);
-}
-main{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-weight: bolder;
-    height: 100vh;
-    min-width: 100vw;
-    padding: 20px;
-    margin-top: 80px;
-}
-img{
+    padding: 200px;
     max-width: 100vw;
+    gap: 100px;
+    background-color:  hsl(0, 100%, 74%);
 }
+section{
+    width: 50%;
+}
+input{
+    display: block;
+    margin-bottom: 12px;
+    border: 2px solid #a8a2a2;
+    border-radius: 4px;
+    width: 200px;
 
+}
+form{
+    background-color: white;
+    width: 100%;
+    margin: 16px;
+    padding: 20px;
+}
+button{
+    background-color: hsl(154, 59%, 51%);
+}
