--- a/style.css
+++ b/style.css
@@ -15,15 +15,41 @@ input{
     margin-bottom: 12px;
     border: 2px solid #a8a2a2;
     border-radius: 4px;
-    width: 200px;
+    width: 350px;
+    height: 48px;
 
 }
 form{
     background-color: white;
-    width: 100%;
+    width: 70%;
     margin: 16px;
     padding: 20px;
 }
 button{
     background-color: hsl(154, 59%, 51%);
+    opacity: 0.9;
+    border: 2px solid #a8a2a2;
+    border-radius: 4px;
+    width: 350px;
+    height: 48px;
+    cursor: pointer;
+}
+.button:hover{
+    opacity: 1;
+}
+#head{
+    background-color: hsl(228, 45%, 44%);
+    border: 2px solid #a8a2a2;
+    border-radius: 4px;
+    width: 450px;
+    height: 48px;
+    font-weight: bold;
+    text-align: center;
+    margin-left: 25px;
+    font-family: Arial;
+}
+h1{
+    color: white;
+    font-weight: bolder;
+    font-family: Arial;
 }
