--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body{
     max-width: 100vw;
     gap: 100px;
     background-color:  hsl(0, 100%, 74%);
+    background-image: url(./images/bg-intro-desktop.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 section{
     width: 50%;
@@ -23,7 +26,7 @@ form{
     background-color: white;
     width: 70%;
     margin: 16px;
-    padding: 20px;
+    padding: 25px;
     border-radius: 8px;
 }
 button{
@@ -42,12 +45,14 @@ button{
     background-color: hsl(228, 45%, 44%);
     border: 2px solid #a8a2a2;
     border-radius: 4px;
-    width: 450px;
-    height: 48px;
-    font-weight: bold;
+    width: 550px;
+    height: 75px;
+    font-size: x-large;
     text-align: center;
-    margin-left: 35px;
+    margin-right: 100px;
+    margin-left: 25px;
     font-family: Arial;
+    margin-bottom: 30px;
 }
 h1{
     color: white;
